# stone-dc-2022

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml
data/curated/: correlacoes.json  describe.csv  head.csv  qtd_contratos_novos.json  qtd_contratos_venc.json  qtd_sub_count.json  qtd_vlr_des.json  qtd_vlr_pgt.json  qtds_mapa.json  sazonalidade.json  sazonalidadeComponentes.json
data/processed/: geralClientesComunicadosLimpo.parquet  mapaProcessado.json
logs/dadosDuplicados/: geralClientes.parquet  geralClientesComunicados.parquet
logs/dadosND/: geralClientesComunicadosLimpoND.parquet
models/: README.md  modelo_app.py
models/utils/: gerador.py  plots.py
notebooks/: frequencias.ipynb  gerarGraficos.ipynb
utils/: etl.py  gerador.py  limpeza.py  plots.py  to_parquet.py
