[tool.poetry]
name = "stone-dc-2022"
version = "0.1.0"
description = "Stone Data Challenge 2022"
authors = ["João Vitor <joaovitorsouza205@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.9.0"
plotly = "^5.8.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
